--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</header>
 			<p>I am a Computer Scientist that follows Software Engineering best practices and Agile principles to design, develop and deliver software with high product and code quality.</p>
 			<p>I am motivated by discovering and understanding things. That encompasses all my life. For that, besides my Computer Science formation, I have a deep knowledge in Mathematics, Algorithms and Data Structures and a broad knowledge in many other things that goes from card and table games like Bridge and Chess to other disciplines like Electronics and Physics.</p>
-			<p>I am also a trained instructor. That made me familiar and confortable with teaching, communicating in a team and speaking publicly.</p>
+			<p>I am also a trained instructor. That made me familiar and comfortable with teaching, communicating in a team and speaking publicly.</p>
 
 			<!--
 			<ul class="actions">
