--- a/roleta.html
+++ b/roleta.html
@@ -51,19 +51,19 @@
       });
     }
 
-    console.log("Versão 29/08/2021")
+    console.log("Versão 12/09/2021")
 
     const values = [
       6.000,
-      6.364,
-      8.500,
+      6.545,
+      8.750,
       5.600,
-      7.833,
-      8.000,
+      6.857,
+      8.143,
+      5.750,
       6.286,
+      8.500,
       6.000,
-      8.000,
-      5.000,
     ]
     const names = [
       "Alessandro",
@@ -83,10 +83,10 @@
       true, //  "Diego",
       true, //  "Gabriel",
       true, //  "Renato",
-      true, //  "Romio",
-      false, //  "Rafa",
-      true, // "Pedro",
-      false, // "Katague",
+      false, //  "Romio",
+      true, //  "Rafa",
+      false, // "Pedro",
+      true, // "Katague",
       true, //  "Samu",
       true, //   "Vivian"
     ]
@@ -121,7 +121,7 @@
     function draw(angleOffset) {
       ctx.save()
       ctx.strokeStyle = 'black'
-      ctx.fillStyle = 'cyan'
+      ctx.fillStyle = '#492d56'
 
       drawCircle(centerX, centerY, radius)
       drawPointer(centerX + radius, centerY)
