--- a/roleta.html
+++ b/roleta.html
@@ -51,19 +51,19 @@
       });
     }
 
-    console.log("Versão 12/09/2021")
+    console.log("Versão 14/11/2021")
 
     const values = [
-      6.000,
-      6.545,
-      8.750,
-      5.600,
-      6.857,
-      8.143,
       5.750,
-      6.286,
-      8.500,
-      6.000,
+    	6.077,
+    	8.333,
+    	5.900,
+    	6.714,
+    	7.875,
+    	5.333,
+    	6.125,
+    	9.250,
+      7.000
     ]
     const names = [
       "Alessandro",
@@ -80,12 +80,12 @@
 
     const eligible = [
       true, //  "Alessandro",
-      true, //  "Diego",
+      false, //  "Diego",
       true, //  "Gabriel",
       true, //  "Renato",
-      false, //  "Romio",
-      true, //  "Rafa",
-      false, // "Pedro",
+      true, //  "Romio",
+      false, //  "Rafa",
+      true, // "Pedro",
       true, // "Katague",
       true, //  "Samu",
       true, //   "Vivian"
@@ -121,7 +121,7 @@
     function draw(angleOffset) {
       ctx.save()
       ctx.strokeStyle = 'black'
-      ctx.fillStyle = '#492d56'
+      ctx.fillStyle = 'blue'
 
       drawCircle(centerX, centerY, radius)
       drawPointer(centerX + radius, centerY)
