--- a/roleta.html
+++ b/roleta.html
@@ -54,15 +54,15 @@
     console.log("Versão 14/11/2021")
 
     const values = [
-      5.750,
-    	6.077,
-    	8.333,
-    	5.900,
-    	6.714,
-    	7.875,
-    	5.333,
-    	6.125,
-    	9.250,
+      5.462,
+      6.231,
+      8.556,
+      6.000,
+      6.714,
+      8.125,
+      5.444,
+      6.250,
+      9.250,
       7.000
     ]
     const names = [
@@ -79,8 +79,8 @@
     ]
 
     const eligible = [
-      true, //  "Alessandro",
-      false, //  "Diego",
+      false, //  "Alessandro",
+      true, //  "Diego",
       true, //  "Gabriel",
       true, //  "Renato",
       true, //  "Romio",
