--- a/sale/index.html
+++ b/sale/index.html
@@ -41,10 +41,7 @@
 			<h2>Menu</h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="generic.html">Ipsum veroeros</a></li>
-				<li><a href="generic.html">Tempus etiam</a></li>
-				<li><a href="generic.html">Consequat dolor</a></li>
-				<li><a href="elements.html">Elements</a></li>
+				<li><a href="fridge.html">Fridge/Freezer</a></li>
 			</ul>
 		</nav>
 
@@ -61,12 +58,12 @@
 				<section class="tiles">
 					<article class="style1">
 						<span class="image">
-							<img src="images/pic01.jpg" alt="" />
+							<img src="images/fridge3.jpg" alt="" />
 						</span>
-						<a href="generic.html">
-							<h2>Magna</h2>
+						<a href="fridge.html">
+							<h2>Fridge/Freezer</br>499.00</h2>
 							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+								<p>Siemens iQ500 Free-Standing Fridge Freezer Combination</p>
 							</div>
 						</a>
 					</article>
