remove unused code. ready to publish

--- a/sale/fridge.html
+++ b/sale/fridge.html
@@ -48,7 +48,7 @@
 			<div class="inner">
 				<span class="image left"><img src="images/fridge3.jpg" alt="" /></span>
 				<h1>Siemens iQ500 Free-Standing Fridge Freezer Combination</h1>
-				<p>As most other itens, the fridge have around 2 years of use. It is as new, with the only exception of
+				<p>As most other items, the fridge have around 2 years of use. It is as new, with the only exception of
 					a small crack in the fruit lower plastic bowl (photo).</p>
 				<!-- Table -->
 				<section>
