--- a/sale/index.html
+++ b/sale/index.html
@@ -50,13 +50,14 @@
 			<div class="inner">
 				<header>
 					<h1>Welcome to Alessandro's move-away furniture sale.<br />
-						Every item is available from pickup until the 26th of November.</h1>
-					<p>The prices go lower every day. On the 26th of November, I will donate everything that is left.
+						Every item is available for pickup until the 26th of November.</h1>
+					<p>The prices go lower every day. On the 26th of November, I will donate everything that is left to
+						a trusted institution.
 					</p>
 					<p>The pickup is at Seeburger Str, in Spandau, Berlin (13581).</p>
 				</header>
 				<section class="tiles">
-					<article class="style1">
+					<article class="style2">
 						<span class="image">
 							<img src="images/fridge3.jpg" alt="" />
 						</span>
@@ -64,61 +65,6 @@
 							<h2>Fridge/Freezer</br>499.00</h2>
 							<div class="content">
 								<p>Siemens iQ500 Free-Standing Fridge Freezer Combination</p>
-							</div>
-						</a>
-					</article>
-					<article class="style2">
-						<span class="image">
-							<img src="images/pic02.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Lorem</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style3">
-						<span class="image">
-							<img src="images/pic03.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Feugiat</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style4">
-						<span class="image">
-							<img src="images/pic04.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Tempus</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style5">
-						<span class="image">
-							<img src="images/pic05.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Aliquam</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-							</div>
-						</a>
-					</article>
-					<article class="style6">
-						<span class="image">
-							<img src="images/pic06.jpg" alt="" />
-						</span>
-						<a href="generic.html">
-							<h2>Veroeros</h2>
-							<div class="content">
-								<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 							</div>
 						</a>
 					</article>
