also add footer to item pages

--- a/sale/fridge.html
+++ b/sale/fridge.html
@@ -83,8 +83,15 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-
 			<div class="inner">
+				<section>
+					<h2>I want to buy something!</h2>
+					Contact me:
+					<a href="https://wa.me/49015228183713" class="icon brands style2 fa-whatsapp"><span
+							class="label">Whatsapp</span></a>
+					<a href="https://t.me/rulojuka" class="icon brands style2 fa-telegram"><span
+							class="label">Telegram</span></a>
+				</section>
 				<section>
 					<h2>Check that I really exist:</h2>
 					<ul class="icons">
