--- a/sale/fridge.html
+++ b/sale/fridge.html
@@ -71,20 +71,21 @@
 								</tr>
 								<tr>
 									<td>My current price:</td>
-									<td><b>499.00</b></td>
+									<td><a href="#contact"><b>499.00</b></a></td>
 								</tr>
 							</tbody>
 						</table>
 						<span class="image fit"><img src="images/fridge2.jpg" alt="" /></span>
 					</div>
 				</section>
+				<span class="image fit"><img src="images/fridge1.jpg" alt="" /></span>
 			</div>
 		</div>
 
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="inner">
-				<section>
+				<section id="contact">
 					<h2>I want to buy something!</h2>
 					Contact me:
 					<a href="https://wa.me/49015228183713" class="icon brands style2 fa-whatsapp"><span
@@ -93,7 +94,7 @@
 							class="label">Telegram</span></a>
 				</section>
 				<section>
-					<h2>Check that I really exist:</h2>
+					<h2>More info about me:</h2>
 					<ul class="icons">
 						<li><a href="https://github.com/rulojuka" class="icon brands style2 fa-github"><span
 									class="label">GitHub</span></a></li>
