--- a/sale/index.html
+++ b/sale/index.html
@@ -55,6 +55,7 @@
 						a trusted institution.
 					</p>
 					<p>The pickup is at Seeburger Str, in Spandau, Berlin (13581).</p>
+					<p><a href="#contact">Contact me</a> for more information.</p>
 				</header>
 				<section class="tiles">
 					<article class="style2">
@@ -78,7 +79,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="inner">
-				<section>
+				<section id="contact">
 					<h2>I want to buy something!</h2>
 					Contact me:
 					<a href="https://wa.me/49015228183713" class="icon brands style2 fa-whatsapp"><span
@@ -87,7 +88,7 @@
 							class="label">Telegram</span></a>
 				</section>
 				<section>
-					<h2>Check that I really exist:</h2>
+					<h2>More info about me:</h2>
 					<ul class="icons">
 						<li><a href="https://github.com/rulojuka" class="icon brands style2 fa-github"><span
 									class="label">GitHub</span></a></li>
