Add link to spreadsheet and better contact links

--- a/sale/fridge.html
+++ b/sale/fridge.html
@@ -87,11 +87,13 @@
 			<div class="inner">
 				<section id="contact">
 					<h2>I want to buy something!</h2>
-					Contact me:
-					<a href="https://wa.me/49015228183713" class="icon brands style2 fa-whatsapp"><span
-							class="label">Whatsapp</span></a>
-					<a href="https://t.me/rulojuka" class="icon brands style2 fa-telegram"><span
-							class="label">Telegram</span></a>
+					Contact me:</br>
+					<ul class="actions">
+						<li><a href="https://wa.me/49015228183713"
+								class="button icon solid brands fa-whatsapp">Whatsapp</a></li>
+						<li><a href="https://t.me/rulojuka" class="button icon solid brands fa-telegram">Telegram</a>
+						</li>
+					</ul>
 				</section>
 				<section>
 					<h2>More info about me:</h2>
