--- a/sale/index.html
+++ b/sale/index.html
@@ -51,11 +51,22 @@
 				<header>
 					<h1>Welcome to Alessandro's move-away furniture sale.<br />
 						Every item is available for pickup until the 26th of November.</h1>
+					<div class="col-6 col-12-medium">
+						<ul class="actions stacked">
+							<li><a href="https://docs.google.com/spreadsheets/d/1y0kcy_roms9bWNqw9dwhl1NgHb6Q9u0TlCWejgTZZGE/edit?usp=sharing"
+									class="button primary fit">Complete spreadsheet</a></li>
+						</ul>
+					</div>
 					<p>The prices go lower every day. On the 26th of November, I will donate everything that is left to
 						a trusted institution.
 					</p>
 					<p>The pickup is at Seeburger Str, in Spandau, Berlin (13581).</p>
-					<p><a href="#contact">Contact me</a> for more information.</p>
+					<ul class="actions stacked">
+						<li><a href="#contact" class="button small fit">Contact me for more information</a></li>
+					</ul>
+
+
+
 				</header>
 				<section class="tiles">
 					<article class="style2">
@@ -81,11 +92,13 @@
 			<div class="inner">
 				<section id="contact">
 					<h2>I want to buy something!</h2>
-					Contact me:
-					<a href="https://wa.me/49015228183713" class="icon brands style2 fa-whatsapp"><span
-							class="label">Whatsapp</span></a>
-					<a href="https://t.me/rulojuka" class="icon brands style2 fa-telegram"><span
-							class="label">Telegram</span></a>
+					Contact me:</br>
+					<ul class="actions">
+						<li><a href="https://wa.me/49015228183713"
+								class="button icon solid brands fa-whatsapp">Whatsapp</a></li>
+						<li><a href="https://t.me/rulojuka" class="button icon solid brands fa-telegram">Telegram</a>
+						</li>
+					</ul>
 				</section>
 				<section>
 					<h2>More info about me:</h2>
