add language information at contact

--- a/sale/index.html
+++ b/sale/index.html
@@ -92,7 +92,7 @@
 			<div class="inner">
 				<section id="contact">
 					<h2>I want to buy something!</h2>
-					Contact me:</br>
+					Contact me (Portuguese/English):</br>
 					<ul class="actions">
 						<li><a href="https://wa.me/49015228183713"
 								class="button icon solid brands fa-whatsapp">Whatsapp</a></li>
