--- a/sale/couches.html
+++ b/sale/couches.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Fridge/Freezer</title>
+	<title>Couches</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,17 +40,14 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="fridge.html">Fridge/Freezer</a></li>
-				<li><a href="couches.html">Couches</a></li>s
+				<li><a href="couches.html">Couches</a></li>
 			</ul>
 		</nav>
 
 		<!-- Main -->
 		<div id="main">
 			<div class="inner">
-				<span class="image left"><img src="images/fridge3.jpg" alt="" /></span>
-				<h1>Siemens iQ500 Free-Standing Fridge Freezer Combination</h1>
-				<p>As most other items, the fridge have around 2 years of use. It is as new, with the only exception of
-					a small crack in the fruit lower plastic bowl (photo).</p>
+				<h1>2 very comfortable couches</h1>
 				<!-- Table -->
 				<section>
 					<div class="table-wrapper">
@@ -63,23 +60,24 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td><a
-											href="https://www.amazon.de/-/en/Siemens-KG49NAIDP-Free-Standing-Freezer-Combination/dp/B086F4D5PX/">Similar
-											Amazon.de
-											listing (new):</a>
-									</td>
-									<td>688.00</td>
-								</tr>
-								<tr>
 									<td>My current price:</td>
-									<td><a href="#contact"><b>499.00</b></a></td>
+									<td><a href="#contact"><b>450.00</b></a></td>
 								</tr>
 							</tbody>
 						</table>
-						<span class="image fit"><img src="images/fridge2.jpg" alt="" /></span>
 					</div>
 				</section>
-				<span class="image fit"><img src="images/fridge1.jpg" alt="" /></span>
+				<div class="box alt">
+					<div class="row gtr-uniform">
+						<div class="col-12"><span class="image fit"><img src="images/couch_1_1.jpg" alt="" /></span>
+						</div>
+						<div class="col-4"><span class="image fit"><img src="images/couch_1_3.jpg" alt="" /></span>
+						</div>
+						<div class="col-8"><span class="image fit"><img src="images/couch_2_1.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/couch_2_3.jpg" alt="" /></span>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
