--- a/sale/index.html
+++ b/sale/index.html
@@ -42,6 +42,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="fridge.html">Fridge/Freezer</a></li>
+				<li><a href="couches.html">Couches</a></li>
 			</ul>
 		</nav>
 
@@ -77,6 +78,17 @@
 							<h2>Fridge/Freezer</br>499.00</h2>
 							<div class="content">
 								<p>Siemens iQ500 Free-Standing Fridge Freezer Combination</p>
+							</div>
+						</a>
+					</article>
+					<article class="style2">
+						<span class="image">
+							<img src="images/couch_1_3.jpg" alt="" />
+						</span>
+						<a href="couches.html">
+							<h2>2 Couches</br>450.00</h2>
+							<div class="content">
+								<p>2 very comfortable couches</p>
 							</div>
 						</a>
 					</article>
