add clothes closet

--- a/sale/clothes-closet.html
+++ b/sale/clothes-closet.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Couches</title>
+	<title>Clothes Closet</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,7 +48,10 @@
 		<!-- Main -->
 		<div id="main">
 			<div class="inner">
-				<h1>2 very comfortable couches</h1>
+				<h1>Big clothes closet with mirrored doors</h1>
+				<p>The photos show the inside of the right side. The left side is similar to the left one.</p>
+				<p>The mirrored doors slide to the sides. The doors on the side open normally.</p>
+				<p>The closet is big enough for 2 people plus some blankets and other common items.</p>
 				<!-- Table -->
 				<section>
 					<div class="table-wrapper">
@@ -62,7 +65,7 @@
 							<tbody>
 								<tr>
 									<td>My current price:</td>
-									<td><a href="#contact"><b>450.00</b></a></td>
+									<td><a href="#contact"><b>399.00</b></a></td>
 								</tr>
 							</tbody>
 						</table>
@@ -70,12 +73,14 @@
 				</section>
 				<div class="box alt">
 					<div class="row gtr-uniform">
-						<div class="col-12"><span class="image fit"><img src="images/couch_1_1.jpg" alt="" /></span>
+						<div class="col-12"><span class="image fit"><img src="images/clothes-closet_1.jpg"
+									alt="" /></span>
 						</div>
-						<div class="col-4"><span class="image fit"><img src="images/couch_1_3.jpg" alt="" /></span>
+						<div class="col-6"><span class="image fit"><img src="images/clothes-closet_2.jpg"
+									alt="" /></span>
 						</div>
-						<div class="col-8"><span class="image fit"><img src="images/couch_2_1.jpg" alt="" /></span>
-							<span class="image fit"><img src="images/couch_2_3.jpg" alt="" /></span>
+						<div class="col-6"><span class="image fit"><img src="images/clothes-closet_4.jpg"
+									alt="" /></span>
 						</div>
 					</div>
 				</div>
