--- a/sale/fridge.html
+++ b/sale/fridge.html
@@ -40,7 +40,8 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="fridge.html">Fridge/Freezer</a></li>
-				<li><a href="couches.html">Couches</a></li>s
+				<li><a href="couches.html">Couches</a></li>
+				<li><a href="clothes-closet.html">Clothes Closet</a></li>
 			</ul>
 		</nav>
 
