--- a/sale/index.html
+++ b/sale/index.html
@@ -43,6 +43,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="fridge.html">Fridge/Freezer</a></li>
 				<li><a href="couches.html">Couches</a></li>
+				<li><a href="clothes-closet.html">Clothes Closet</a></li>
 			</ul>
 		</nav>
 
