add clothes closet to index.html

--- a/sale/index.html
+++ b/sale/index.html
@@ -76,7 +76,7 @@
 							<img src="images/fridge3.jpg" alt="" />
 						</span>
 						<a href="fridge.html">
-							<h2>Fridge/Freezer</br>499.00</h2>
+							<h2>Fridge/Freezer </br>499.00</h2>
 							<div class="content">
 								<p>Siemens iQ500 Free-Standing Fridge Freezer Combination</p>
 							</div>
@@ -87,9 +87,20 @@
 							<img src="images/couch_1_3.jpg" alt="" />
 						</span>
 						<a href="couches.html">
-							<h2>2 Couches</br>450.00</h2>
+							<h2>2 Couches </br>450.00</h2>
 							<div class="content">
 								<p>2 very comfortable couches</p>
+							</div>
+						</a>
+					</article>
+					<article class="style2">
+						<span class="image">
+							<img src="images/clothes-closet_2.jpg" alt="" />
+						</span>
+						<a href="clothes-closet.html">
+							<h2>Clothes Closet </br>399.00</h2>
+							<div class="content">
+								<p>Big clothes closet with mirrored doors</p>
 							</div>
 						</a>
 					</article>
