add wardrobe dimensions

--- a/sale/clothes-closet.html
+++ b/sale/clothes-closet.html
@@ -49,6 +49,8 @@
 		<div id="main">
 			<div class="inner">
 				<h1>Big clothes closet with mirrored doors</h1>
+				<h3>Dimensions(cm): 312 x 225 x 61</h3>
+				<p>The two wardrobe sectors on the left and right are both 50 cm wide.</p>
 				<p>The photos show the inside of the right side. The left side is similar to the left one.</p>
 				<p>The mirrored doors slide to the sides. The doors on the side open normally.</p>
 				<p>The closet is big enough for 2 people plus some blankets and other common items.</p>
